--- a/WebContent/css/layout.css
+++ b/WebContent/css/layout.css
@@ -3,7 +3,7 @@
 .col2 {width:290px}
 .cols {width:225px}
 /* index.html */
-#page1 {background:url(../images/bg_top.gif)}
+#page1 {background:url(../images/back.jpg)}
 #page1 .text {background:url(../images/bg_img1.jpg) 0 0 no-repeat;padding:71px 0 0 535px;margin-top:17px;height:339px}
 #page1 .text1 span {padding-bottom:40px}
 /* index-1.html */
