--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -4,7 +4,7 @@ mark,rp,rt,ruby,summary,time {display:inline}
 .left {float:left}
 .right {float:right}
 .wrapper {width:100%;overflow:hidden}
-body {background:url(../images/bg_top2.gif) top repeat-x #e2e2e2;border:0;font:13px Arial,Helvetica,sans-serif;color:#323232;line-height:17px}
+body {background:url(../images/back.jpg) border:0;font:13px Arial,Helvetica,sans-serif;color:#323232;line-height:17px}
 .ic, .ic a {border:0;float:right;background:#fff;color:#f00;width:50%;line-height:10px;font-size:10px;margin:-220% 0 0 0;overflow:hidden;padding:0}
 .css3 {border-radius:8px;-moz-border-radius:8px;-webkit-border-radius:8px;box-shadow:0 0 4px rgba(0,0,0,.4);-moz-box-shadow:0 0 4px rgba(0,0,0,.4);-webkit-box-shadow:0 0 4px rgba(0,0,0,.4);behavior:url(js/PIE.htc);position:relative}
 .main {	margin:0 auto;	width:920px}
@@ -21,15 +21,15 @@ header {}
 
 #search .submit {float:right;height:36px;width:80px;background:none;cursor:pointer}
 #search .input {float:right;background:none;font:13px Arial,Helvetica,sans-serif;color:#323232;height:16px;width:143px;padding:10px;padding-right:0}
-#menu {width:100%;overflow:hidden;margin-top:3px}
+#menu {width:120%;overflow:hidden;margin-top:3px}
 #menu li {float:left}
-#menu a {display:block;font-size:20px;font-weight:400;color:#000;background:url(../images/menu.gif) top repeat-x;line-height:55px;text-decoration:none}
+#menu a {display:block;font-size:15px;font-weight:200;color:#000;background:url(../images/menu.gif) top repeat-x;line-height:50px;text-decoration:none}
 #menu li span {display:block;background:url(../images/menu_left.gif) top left no-repeat}
-#menu .alpha span {background:url(../images/left_menu.gif) top left no-repeat}
-#menu .alpha a:hover span,#menu .alpha#menu_active a span {background:url(../images/left_menu_active.gif) top left no-repeat}
-#menu .omega span span {background:url(../images/right_menu.gif) top right no-repeat}
+#menu .alpha span {background:url() top left no-repeat}
+#menu .alpha a:hover span,#menu .alpha#menu_active a span {background:url() top left no-repeat}
+#menu .omega span span {background:url() top right no-repeat}
 #menu .omega a:hover span span,#menu .omega#menu_active a span span {background:url(../images/right_menu_active.gif) top right no-repeat}
-#menu li span span,#menu .alpha span span {background:url(../images/menu_right.gif) top right no-repeat;padding:0 60px}
+#menu li span span,#menu .alpha span span {background:url(../images/menu_right.gif) top right no-repeat;padding:0 20px}
 #menu a:hover,#menu #menu_active a {color:#fff;background:url(../images/menu_active.gif) top repeat-x}
 #menu a:hover span,#menu #menu_active a span {background:url(../images/menu_left_active.gif) top left no-repeat}
 #menu a:hover span span,#menu #menu_active a span span,#menu .alpha#menu_active a span span,#menu .alpha a:hover span span {background:url(../images/menu_right_active.gif) top right no-repeat}
@@ -51,7 +51,7 @@ header {}
 .pad_bot4 {padding-bottom:17px}
 .marg_top {margin-top:17px}
 .marg_top2 {margin-top:7px}
-.box {background:#f5f5f5;behavior:url(js/PIE.htc);position:relative;width:100%;overflow:hidden}
+.box {background:#f5f5f5;behavior:url(js/PIE.htc);position:relative;width:80%;overflow:hidden}
 .box.top {border-radius:10px 10px 0 0;-moz-border-radius:10px 10px 0 0;-webkit-border-radius:10px 10px 0 0;behavior:url(js/PIE.htc)}
 .box.bot {border-radius:0 0 11px 11px ;-moz-border-radius:0 0 11px 11px;-webkit-border-radius:0 0 11px 11px;behavior:url(js/PIE.htc)}
 .banners {padding:19px 0 19px 19px;overflow:hidden}
